fixed whitespace

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -19,7 +19,6 @@
     display: flex;
     z-index: 8;
     left: -10.5%;
-    width: 100%;
     h1 {
         overflow: hidden;
         font-size: 2.5vw;
@@ -100,7 +99,6 @@
         z-index: 8;
         left: 3%;
         top: 0;
-        width: 100%;
         h1 {
             overflow: hidden;
             font-size: 3.5vw;
@@ -169,9 +167,7 @@
         z-index: 8;
         left: 3%;
         top: 0;
-        width: 100%;
         h1 {
-            overflow: hidden;
             font-size: 7vw;
             .name {
                 max-width: 100%;
