--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     background-color: $soft-white;
     margin: 0;
+    padding: 0;
+    overflow: auto;
     html {
         height: 100%;
         min-height: 100%;
